Bug 260084 - page number variable is very inconsistent
Summary: page number variable is very inconsistent
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-11 11:18 UTC by Thomas Zander
Modified: 2015-02-09 21:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Faure 2010-12-16 00:29:44 UTC


---- Reported by zander@kde.org 2009-09-11 11:18:23 ----

Insert some variables like 'page number' and select the text.
Copy the text.

Somewhere else in the document, preferably on another page, paste the clipboard.
The pasted page number variable will show inconsistent but certainly incorrect data.



--- Bug imported by faure@kde.org 2010-12-16 00:31  ---

This bug was previously known as bug 207060.

Comment 1 Camilla Boemann 2015-02-09 11:54:55 UTC
*** Bug 286679 has been marked as a duplicate of this bug. ***
Comment 2 Camilla Boemann 2015-02-09 12:00:26 UTC
though completely new layout this bug  or seems to still be around , or at least similar symptoms

It's not just on copy/paste it becomes wrong - it generally just doesn't show the right values
Comment 3 Camilla Boemann 2015-02-09 21:29:47 UTC
Git commit bb9269b667535b1d5989a3d7ed59b013b0c250b0 by C. Boemann.
Committed on 09/02/2015 at 20:46.
Pushed by boemann into branch 'calligra/2.9'.

pagenumber variable was updated way too often into inconsistent values
we should only change the value when called during layout, not during paint

M  +21   -9    libs/textlayout/KoTextDocumentLayout.cpp

http://commits.kde.org/calligra/bb9269b667535b1d5989a3d7ed59b013b0c250b0