pagenumber variable was updated way too often into inconsistent values we should only change the value when called during layout, not during paint

BUG:260084